--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: var(--default-spacing);
 }
 
